[package]
name = "rustcroissant"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
derive_builder = "0.20.2"
garde = { version = "0.22.0", features = ["full"] }
hex = "0.4"
path-clean = "1"
rand = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
url = { version = "2.5.7", features = ["serde"] }


[build-dependencies]
chrono = "0.4"
